updated some design

--- a/index.html
+++ b/index.html
@@ -19,24 +19,26 @@
         <div id="score">Score:</div>
         <div id="computer-score">Computer Score:</div>
     </div>
-    <div class="row2">
-        <button>Hit</button>
-        <button>Stand</button>
-        <button>Deal</button>
-    </div>
-    <div class="row3">
-        <table>
-            <tr>
-                <th>Wins</th>
-                <th>Losses</th>
-                <th>Draw</th>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-        </table>
+    <div class="row2and3">
+        <div class="row2">
+            <button>Hit</button>
+            <button>Stand</button>
+            <button>Deal</button>
+        </div>
+        <div class="row3">
+            <table>
+                <tr>
+                    <th>Wins</th>
+                    <th>Losses</th>
+                    <th>Draw</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 
